[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mplex"
version = "0.0.4"
authors = [
  { name="Thomas Ka Chung Lam", email="thomas.lam@epfl.ch" },
]
description = "A matplotlib extension"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tkclam/mplex"
